feat: structure multipage (services, realisations, studio, contact)

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>SemeraroGOD — Studio Digital</title>
-  <meta name="description" content="SemeraroGOD conçoit des expériences digitales haut de gamme : branding, sites sur-mesure et activations numériques.">
+  <meta name="description" content="SemeraroGOD conçoit des identités, des sites et des activations digitales pour marques exigeantes.">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600&display=swap" rel="stylesheet">
@@ -14,10 +14,11 @@
   <header class="nav">
     <div class="nav__logo">Semeraro<span>GOD</span></div>
     <nav class="nav__links">
-      <a href="#services">Services</a>
-      <a href="#cases">Réalisations</a>
-      <a href="#manifesto">Manifesto</a>
-      <a href="#contact">Contact</a>
+      <a class="active" href="index.html">Accueil</a>
+      <a href="services.html">Services</a>
+      <a href="realisations.html">Réalisations</a>
+      <a href="studio.html">Studio</a>
+      <a href="contact.html">Contact</a>
     </nav>
     <a class="nav__cta" href="mailto:hello@semerarogod.com">Parler au studio</a>
   </header>
@@ -27,10 +28,10 @@
       <div class="hero__content">
         <p class="eyebrow">Studio digital · Côte d'Azur → Monde</p>
         <h1>Identités premium & expériences web sculptées pour les marques qui veulent briller en bleu électrique.</h1>
-        <p class="hero__desc">Nous orchestrons branding, design d'interface et développement haute performance en un seul flux. Chaque projet est livré clé en main avec un niveau d'exigence obsessionnel.</p>
+        <p class="hero__desc">Nous orchestrons branding, design d'interface et développement haute performance en un seul flux. Chaque mandat est livré clé en main avec un niveau d'exigence obsessionnel.</p>
         <div class="hero__actions">
-          <a class="btn btn--primary" href="#contact">Lancer un brief</a>
-          <a class="btn btn--ghost" href="#cases">Voir les cas</a>
+          <a class="btn btn--primary" href="contact.html">Lancer un brief</a>
+          <a class="btn btn--ghost" href="realisations.html">Voir nos cas</a>
         </div>
       </div>
       <div class="hero__card">
@@ -43,9 +44,32 @@
       </div>
     </section>
 
+    <section class="quick-grid">
+      <article>
+        <h3>Services</h3>
+        <p>Branding, design system, sites headless, contenus et campagnes.</p>
+        <a href="services.html">Voir le détail →</a>
+      </article>
+      <article>
+        <h3>Réalisations</h3>
+        <p>3 études de cas clés : Riviera Collection, Blue Asset, Vice City Pop-up.</p>
+        <a href="realisations.html">Explorer →</a>
+      </article>
+      <article>
+        <h3>Manifesto</h3>
+        <p>Notre méthode, notre rythme et ce qui nous rend différents.</p>
+        <a href="studio.html">Lire le manifesto →</a>
+      </article>
+      <article>
+        <h3>Contact</h3>
+        <p>Briefs, disponibilités, process de démarrage et formulaire.</p>
+        <a href="contact.html">Discuter →</a>
+      </article>
+    </section>
+
     <section class="grid" id="services">
       <div class="grid__header">
-        <p class="eyebrow">Services</p>
+        <p class="eyebrow">Aperçu</p>
         <h2>Trois piliers, un seul studio</h2>
       </div>
       <div class="grid__cards">
@@ -66,8 +90,8 @@
 
     <section class="cases" id="cases">
       <div class="cases__header">
-        <p class="eyebrow">Réalisations</p>
-        <h2>Selection SemeraroGOD</h2>
+        <p class="eyebrow">Focus</p>
+        <h2>Réalisations récentes</h2>
       </div>
       <div class="cases__list">
         <article>
@@ -100,17 +124,8 @@
       </div>
       <div class="manifesto__aside">
         <p>SemeraroGOD travaille avec des maisons de luxe, fonds d'investissement, artistes et entrepreneurs. Nous pouvons démarrer un sprint en 7 jours si le brief est clair.</p>
-        <a class="btn btn--primary" href="mailto:hello@semerarogod.com">Envoyer un deck</a>
+        <a class="btn btn--primary" href="contact.html">Envoyer un deck</a>
       </div>
-    </section>
-
-    <section class="contact" id="contact">
-      <div>
-        <p class="eyebrow">Contact</p>
-        <h2>Parlons de votre prochain lancement</h2>
-        <p>hello@semerarogod.com · +33 6 00 00 00 00</p>
-      </div>
-      <a class="btn btn--primary" href="mailto:hello@semerarogod.com?subject=Projet%20SemeraroGOD">Planifier un call</a>
     </section>
   </main>
 
