feat: ajout du logo SemeraroGOD sur toutes les pages

--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@
 </head>
 <body class="page">
   <header class="nav">
-    <div class="nav__logo">Semeraro<span>GOD</span></div>
+    <div class="nav__logo"><img src="assets/logo.svg" alt="SemeraroGOD"/><span>Semeraro<span>GOD</span></span></div>
     <nav class="nav__links">
       <a href="index.html">Accueil</a>
       <a class="active" href="services.html">Services</a>
