--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header class="nav">
-    <div class="nav__logo">Semeraro<span>GOD</span></div>
+    <div class="nav__logo"><img src="assets/logo.svg" alt="SemeraroGOD"/><span>Semeraro<span>GOD</span></span></div>
     <nav class="nav__links">
       <a class="active" href="index.html">Accueil</a>
       <a href="services.html">Services</a>
