feat: integration nouveaux logos

--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 </head>
 <body class="page">
   <header class="nav">
-    <div class="nav__logo"><img src="assets/logo.svg" alt="SemeraroGOD"/><span>Semeraro<span>GOD</span></span></div>
+    <div class="nav__logo"><img src="assets/logo-wordmark.svg" alt="SemeraroGOD"/></div>
     <nav class="nav__links">
       <a href="index.html">Accueil</a>
       <a href="services.html">Services</a>
@@ -25,6 +25,7 @@
   <main>
     <section class="section">
       <p class="eyebrow">Contact</p>
+      <img class="contact__logo" src="assets/logo-monogram.svg" alt="SemeraroGOD" />
       <h2>Briefons votre prochain lancement</h2>
       <p>hello@semerarogod.com · +33 6 00 00 00 00</p>
     </section>
