--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <header class="nav">
-    <div class="nav__logo"><img src="assets/logo.svg" alt="SemeraroGOD"/><span>Semeraro<span>GOD</span></span></div>
+    <div class="nav__logo"><img src="assets/logo-wordmark.svg" alt="SemeraroGOD"/></div>
     <nav class="nav__links">
       <a class="active" href="index.html">Accueil</a>
       <a href="services.html">Services</a>
@@ -35,6 +35,7 @@
         </div>
       </div>
       <div class="hero__card">
+        <img class="hero__card-icon" src="assets/logo-icon.svg" alt="SemeraroGOD icon"/>
         <span>Last drops</span>
         <ul>
           <li>Luxury web 03 — Hôtel privé (Monaco)</li>
