feat: page a propos inspiree de Wingfield

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a class="active" href="index.html">Accueil</a>
       <a href="services.html">Services</a>
       <a href="realisations.html">Réalisations</a>
-      <a href="studio.html">Studio</a>
+      <a href="about.html">À propos</a>
       <a href="contact.html">Contact</a>
     </nav>
     <a class="nav__cta" href="mailto:hello@semerarogod.com">Parler au studio</a>
@@ -59,7 +59,7 @@
       <article>
         <h3>Manifesto</h3>
         <p>Notre méthode, notre rythme et ce qui nous rend différents.</p>
-        <a href="studio.html">Lire le manifesto →</a>
+        <a href="about.html">Lire le manifesto →</a>
       </article>
       <article>
         <h3>Contact</h3>
