--- a/services.html
+++ b/services.html
@@ -16,7 +16,7 @@
       <a href="index.html">Accueil</a>
       <a class="active" href="services.html">Services</a>
       <a href="realisations.html">Réalisations</a>
-      <a href="studio.html">Studio</a>
+      <a href="about.html">À propos</a>
       <a href="contact.html">Contact</a>
     </nav>
     <a class="nav__cta" href="mailto:hello@semerarogod.com">Parler au studio</a>
