Revert "style: loader, nav, palette gris, cta, multi-pages"
This reverts commit 5d3443eb8055abcf96e933b1bfe6f69c25da5ba7.

--- a/contact.html
+++ b/contact.html
@@ -10,20 +10,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body class="page">
-  <div class="loader" id="loader">
-    <img src="assets/logo-monogram.svg" alt="SemeraroGOD"/>
-  </div>
   <header class="nav">
     <div class="nav__logo"><img src="assets/logo-wordmark.svg" alt="SemeraroGOD"/></div>
-    <nav class="nav__links" id="navLinks">
+    <nav class="nav__links">
       <a href="index.html">Accueil</a>
       <a href="services.html">Services</a>
       <a href="realisations.html">Réalisations</a>
       <a href="about.html">À propos</a>
       <a class="active" href="contact.html">Contact</a>
     </nav>
-    <button class="nav__toggle" id="navToggle">☰</button>
-    <a class="nav__cta" href="mailto:hello@semerarogod.com">Démarrer un projet</a>
+    <a class="nav__cta" href="mailto:hello@semerarogod.com">Parler au studio</a>
   </header>
 
   <main>
@@ -81,6 +77,5 @@
       });
     }
   </script>
-  <script src="main.js"></script>
 </body>
 </html>
