--- a/about.html
+++ b/about.html
@@ -10,20 +10,16 @@
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body class="page">
-  <div class="loader" id="loader">
-    <img src="assets/logo-monogram.svg" alt="SemeraroGOD"/>
-  </div>
   <header class="nav">
     <div class="nav__logo"><img src="assets/logo-wordmark.svg" alt="SemeraroGOD"/></div>
-    <nav class="nav__links" id="navLinks">
+    <nav class="nav__links">
       <a href="index.html">Accueil</a>
       <a href="services.html">Services</a>
       <a href="realisations.html">Réalisations</a>
       <a class="active" href="about.html">À propos</a>
       <a href="contact.html">Contact</a>
     </nav>
-    <button class="nav__toggle" id="navToggle">☰</button>
-    <a class="nav__cta" href="mailto:hello@semerarogod.com">Démarrer un projet</a>
+    <a class="nav__cta" href="mailto:hello@semerarogod.com">Parler au studio</a>
   </header>
 
   <main>
@@ -111,6 +107,5 @@
   <footer class="footer">
     <p>© SemeraroGOD 2026 · Studio Digital Côte d'Azur</p>
   </footer>
-  <script src="main.js"></script>
 </body>
 </html>
