feat: english localization

--- a/about.html
+++ b/about.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>À propos — SemeraroGOD</title>
+  <title>About — SemeraroGOD</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,99 +13,107 @@
   <header class="nav">
     <div class="nav__logo"><img src="assets/logo-wordmark.svg" alt="SemeraroGOD"/></div>
     <nav class="nav__links">
-      <a href="index.html">Accueil</a>
+      <a href="index.html">Home</a>
       <a href="services.html">Services</a>
-      <a href="realisations.html">Réalisations</a>
-      <a class="active" href="about.html">À propos</a>
+      <a href="realisations.html">Work</a>
+      <a class="active" href="about.html">About</a>
       <a href="contact.html">Contact</a>
     </nav>
-    <a class="nav__cta" href="mailto:hello@semerarogod.com">Parler au studio</a>
+    <a class="nav__cta" href="mailto:hello@semerarogod.com">Start a project</a>
   </header>
 
   <main>
-    <section class="about-hero">
-      <div>
-        <p class="eyebrow">À propos</p>
-        <h1>SemeraroGOD est un atelier digital indépendant obsédé par la précision et la vitesse.</h1>
-        <p>Basé sur la Côte d’Azur, nous opérons comme une strike team : branding, produit, contenu et delivery dans un seul flux. Pas de silos, pas de lourdeur.</p>
-      </div>
-      <div class="stats">
-        <article><strong>40</strong><span>lancements en 24 mois</span></article>
-        <article><strong>3</strong><span>pays où nous opérons</span></article>
-        <article><strong>96%</strong><span>clients en rétention</span></article>
-      </div>
+    <section class="section">
+      <p class="eyebrow">About</p>
+      <h2>SemeraroGOD is an independent digital atelier obsessed with precision and speed.</h2>
+      <p>Based on the Côte d’Azur, we operate as a strike team where branding, product, content and delivery move in the same flow. No hand-offs, no friction.</p>
     </section>
 
     <section class="values section">
-      <h2>Ce qui nous guide</h2>
+      <h3>What drives us</h3>
       <div class="grid__cards">
         <article>
-          <h3>Clarté</h3>
-          <p>On documente tout (Notion). Chaque livrable est traçable et commenté.</p>
+          <h4>Clarity</h4>
+          <p>Everything is documented in Notion. Every deliverable is traceable and commented.</p>
         </article>
         <article>
-          <h3>Rigueur</h3>
-          <p>Design systems, tokens, QA automatisée. Rien n’est laissé au hasard.</p>
+          <h4>Rigor</h4>
+          <p>Design systems, tokens, automated QA. Nothing is left to chance.</p>
         </article>
         <article>
-          <h3>Énergie</h3>
-          <p>Rythme hebdo, points rapides, décisions au jour le jour.</p>
+          <h4>Energy</h4>
+          <p>Weekly cadence, quick stand-ups, day-to-day decisions.</p>
         </article>
       </div>
     </section>
 
-    <section class="timeline section">
-      <h2>Timeline</h2>
+    <section class="section">
+      <h3>Timeline</h3>
       <div class="timeline__list">
         <div>
           <span>2020</span>
-          <p>Lancement du studio, focus branding + sites luxe.</p>
+          <p>Studio launch, focus on branding and luxury websites.</p>
         </div>
         <div>
           <span>2022</span>
-          <p>Internalisation dev headless, création design system maison.</p>
+          <p>Headless dev brought in-house, creation of our own design system.</p>
         </div>
         <div>
           <span>2024</span>
-          <p>Activation internationale (Fintech AMF, hospitality Monaco).</p>
+          <p>International activations (Fintech AMF, Monaco hospitality).</p>
         </div>
       </div>
     </section>
 
-    <section class="team section">
-      <h2>Core team</h2>
+    <section class="section">
+      <h3>Core team</h3>
       <div class="team__grid">
         <article>
-          <h3>Louis Semeraro</h3>
-          <p>Creative Director · Direction artistique & produit</p>
+          <h4>Louis Semeraro</h4>
+          <p>Creative Director · Art & product lead</p>
         </article>
         <article>
-          <h3>Anaïs</h3>
+          <h4>Anaïs</h4>
           <p>Lead UX/UI · Design systems & motion</p>
         </article>
         <article>
-          <h3>Marco</h3>
+          <h4>Marco</h4>
           <p>Lead Front-end · Next.js / Webflow / Shopify</p>
         </article>
         <article>
-          <h3>Collectif</h3>
-          <p>Motion, 3D, copywriting premium on-demand</p>
+          <h4>Collective</h4>
+          <p>Motion, 3D, premium copywriting on demand</p>
         </article>
       </div>
     </section>
 
-    <section class="cta">
-      <h3>Prêt à construire ensemble ?</h3>
-      <p>On peut démarrer un sprint en 7 jours. Briefs via email ou WhatsApp.</p>
-      <div class="hero__actions" style="justify-content:center;">
-        <a class="btn btn--primary" href="mailto:hello@semerarogod.com">Envoyer un deck</a>
-        <a class="btn btn--ghost" href="contact.html">Voir les disponibilités</a>
+    <section class="section">
+      <h3>What sets us apart</h3>
+      <div class="process">
+        <article>
+          <h4>Transparency</h4>
+          <p>Shared Notion dashboard, daily recap, visible KPIs.</p>
+        </article>
+        <article>
+          <h4>Controlled sprints</h4>
+          <p>Deliveries every Friday, video reviews, instant decisions.</p>
+        </article>
+        <article>
+          <h4>Tech agnostic</h4>
+          <p>Headless, Webflow, Shopify, Unreal, Notion — we pick the stack that fits.</p>
+        </article>
       </div>
+    </section>
+
+    <section class="section">
+      <h3>Ready to build together?</h3>
+      <p>We can kick off a sprint in 7 days. Share your brief via email or WhatsApp.</p>
+      <a class="btn btn--primary" href="mailto:hello@semerarogod.com">Send your deck</a>
     </section>
   </main>
 
   <footer class="footer">
-    <p>© SemeraroGOD 2026 · Studio Digital Côte d'Azur</p>
+    <p>© SemeraroGOD 2026 · Digital Studio</p>
   </footer>
 </body>
 </html>
