--- a/realisations.html
+++ b/realisations.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Réalisations — SemeraroGOD</title>
+  <title>Work — SemeraroGOD</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,40 +13,40 @@
   <header class="nav">
     <div class="nav__logo"><img src="assets/logo-wordmark.svg" alt="SemeraroGOD"/></div>
     <nav class="nav__links">
-      <a href="index.html">Accueil</a>
+      <a href="index.html">Home</a>
       <a href="services.html">Services</a>
-      <a class="active" href="realisations.html">Réalisations</a>
-      <a href="about.html">À propos</a>
+      <a class="active" href="realisations.html">Work</a>
+      <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
     </nav>
-    <a class="nav__cta" href="mailto:hello@semerarogod.com">Parler au studio</a>
+    <a class="nav__cta" href="mailto:hello@semerarogod.com">Start a project</a>
   </header>
 
   <main>
     <section class="section">
       <p class="eyebrow">Portfolio</p>
-      <h2>Quelques cas emblématiques</h2>
-      <p>Nous travaillons sous NDA pour certaines maisons. Voici trois projets que nous pouvons partager.</p>
+      <h2>Selected work</h2>
+      <p>We work under NDA for several houses. Here are three projects we can share publicly.</p>
     </section>
 
     <section class="cases">
       <div class="cases__list">
         <article>
-          <div class="tag">Web immersif</div>
+          <div class="tag">Immersive web</div>
           <h3>Riviera Collection</h3>
-          <p>Scroll narratif, cartes des villas et module de réservation connecté à un PMS privé. Score Lighthouse 97/100.</p>
+          <p>Editorial scroll experience + villa configurator connected to a private PMS. Lighthouse 97/100.</p>
           <ul>
-            <li>UX/UI complet</li>
+            <li>Full UX/UI</li>
             <li>Next.js + Sanity</li>
-            <li>Déploiement Vercel multi-régions</li>
+            <li>Multi-region Vercel deployment</li>
           </ul>
         </article>
         <article>
-          <div class="tag">Plateforme fintech</div>
+          <div class="tag">Fintech platform</div>
           <h3>Blue Asset</h3>
-          <p>Refonte identité + design system Figma. Production d'une librairie React Typescript pour accélérer 8 produits simultanément.</p>
+          <p>Rebrand + Figma design system. Built a React / Typescript component library to deploy 8 products in parallel.</p>
           <ul>
-            <li>Brand book 80 pages</li>
+            <li>80-page brand book</li>
             <li>Components + tokens</li>
             <li>Storybook + Chromatic</li>
           </ul>
@@ -54,10 +54,10 @@
         <article>
           <div class="tag">Activation</div>
           <h3>Vice City Pop-up</h3>
-          <p>Site événement, kit social et automatisations CRM. 5 200 leads en 10 jours, ROI x12 sur la campagne paid.</p>
+          <p>Event website, social kit and CRM automations. 5,200 leads in 10 days with a 12× ROI on paid media.</p>
           <ul>
             <li>Landing + Webflow</li>
-            <li>Intégrations HubSpot</li>
+            <li>HubSpot integrations</li>
             <li>Motion design & reels</li>
           </ul>
         </article>
@@ -66,7 +66,7 @@
   </main>
 
   <footer class="footer">
-    <p>© SemeraroGOD 2026 · Studio Digital Côte d'Azur</p>
+    <p>© SemeraroGOD 2026 · Digital Studio</p>
   </footer>
 </body>
 </html>
