--- a/services.html
+++ b/services.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,72 +13,72 @@
   <header class="nav">
     <div class="nav__logo"><img src="assets/logo-wordmark.svg" alt="SemeraroGOD"/></div>
     <nav class="nav__links">
-      <a href="index.html">Accueil</a>
+      <a href="index.html">Home</a>
       <a class="active" href="services.html">Services</a>
-      <a href="realisations.html">Réalisations</a>
-      <a href="about.html">À propos</a>
+      <a href="realisations.html">Work</a>
+      <a href="about.html">About</a>
       <a href="contact.html">Contact</a>
     </nav>
-    <a class="nav__cta" href="mailto:hello@semerarogod.com">Parler au studio</a>
+    <a class="nav__cta" href="mailto:hello@semerarogod.com">Start a project</a>
   </header>
 
   <main>
     <section class="section">
       <p class="eyebrow">Services</p>
-      <h2>Nous alignons stratégie, design et exécution</h2>
-      <p>Chaque mandat commence par un atelier d’alignement (2h) puis se décompose en sprints de 10 jours. Tout se déroule sur Notion + Figma + Linear pour garder un rythme clair.</p>
+      <h2>We align strategy, design and execution</h2>
+      <p>Every engagement starts with a 2-hour alignment workshop then unfolds in 10-day sprints. We keep everything inside Notion + Figma + Linear so you always know what ships next.</p>
     </section>
 
     <section class="section">
       <h3>01 · Brand systems</h3>
       <ul class="list">
-        <li>Audit & positionnement</li>
-        <li>Identité complète (logo, palette, typographies, iconographie)</li>
-        <li>Brand book interactif (Figma + PDF)</li>
-        <li>Kits réseaux sociaux et templates decks</li>
+        <li>Audit & positioning</li>
+        <li>Full identity (logo, palette, typography, iconography)</li>
+        <li>Interactive brand book (Figma + PDF)</li>
+        <li>Social kits and deck templates</li>
       </ul>
     </section>
 
     <section class="section">
-      <h3>02 · Web sur-mesure</h3>
+      <h3>02 · Bespoke web</h3>
       <ul class="list">
-        <li>UX/UI haute fidélité (desktop + mobile)</li>
-        <li>Intégration headless (Next.js / Remix) ou Webflow selon le contexte</li>
-        <li>Animations GSAP / WebGL, systèmes multi-langues</li>
-        <li>Performance & SEO technique (Lighthouse &gt; 95)</li>
+        <li>High fidelity UX/UI (desktop + mobile)</li>
+        <li>Headless builds (Next.js / Remix) or Webflow depending on context</li>
+        <li>GSAP / WebGL animations, multi-language setups</li>
+        <li>Performance & technical SEO (Lighthouse &gt; 95)</li>
       </ul>
     </section>
 
     <section class="section">
-      <h3>03 · Activation & contenu</h3>
+      <h3>03 · Activation & content</h3>
       <ul class="list">
-        <li>Landing campaigns + automation CRM</li>
-        <li>Newsletters, motion, assets sociaux prêts à publier</li>
-        <li>Plan média & reporting (Looker / Notion)</li>
+        <li>Landing campaigns + CRM automation</li>
+        <li>Newsletters, motion, social assets ready to publish</li>
+        <li>Media plan & reporting (Looker / Notion)</li>
       </ul>
     </section>
 
     <section class="section">
-      <h3>Process type</h3>
+      <h3>Typical process</h3>
       <div class="process">
         <article>
-          <h4>Semaine 0</h4>
-          <p>Kickoff, audit, accès aux précédents assets, cadrage KPI.</p>
+          <h4>Week 0</h4>
+          <p>Kickoff, audit, access to previous assets, KPI framing.</p>
         </article>
         <article>
-          <h4>Semaines 1-2</h4>
-          <p>Explorations créatives, axes visuels, maquettes clé.</p>
+          <h4>Weeks 1–2</h4>
+          <p>Creative explorations, visual axes, key mockups.</p>
         </article>
         <article>
-          <h4>Semaines 3-4</h4>
-          <p>Production finale (design + intégration) + QA + tracking.</p>
+          <h4>Weeks 3–4</h4>
+          <p>Final production (design + build) + QA + tracking setup.</p>
         </article>
       </div>
     </section>
   </main>
 
   <footer class="footer">
-    <p>© SemeraroGOD 2026 · Studio Digital Côte d'Azur</p>
+    <p>© SemeraroGOD 2026 · Digital Studio</p>
   </footer>
 </body>
 </html>
