--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,69 +13,50 @@
   <header class="nav">
     <div class="nav__logo"><img src="assets/logo-wordmark.svg" alt="SemeraroGOD"/></div>
     <nav class="nav__links">
-      <a href="index.html">Accueil</a>
+      <a href="index.html">Home</a>
       <a href="services.html">Services</a>
-      <a href="realisations.html">Réalisations</a>
-      <a href="about.html">À propos</a>
+      <a href="realisations.html">Work</a>
+      <a href="about.html">About</a>
       <a class="active" href="contact.html">Contact</a>
     </nav>
-    <a class="nav__cta" href="mailto:hello@semerarogod.com">Parler au studio</a>
+    <a class="nav__cta" href="mailto:hello@semerarogod.com">Start a project</a>
   </header>
 
   <main>
     <section class="section">
       <p class="eyebrow">Contact</p>
-      <img class="contact__logo" src="assets/logo-monogram.svg" alt="SemeraroGOD" />
-      <h2>Briefons votre prochain lancement</h2>
+      <h2>Let’s brief your next launch</h2>
       <p>hello@semerarogod.com · +33 6 00 00 00 00</p>
     </section>
 
     <section class="section">
-      <h3>Formulaire express</h3>
+      <h3>Express form</h3>
       <form class="contact-form" id="contactForm">
-        <label>
-          Nom / société
-          <input type="text" name="name" required>
-        </label>
-        <label>
-          Email
-          <input type="email" name="email" required>
-        </label>
-        <label>
-          Téléphone (optionnel)
-          <input type="text" name="phone">
-        </label>
-        <label>
-          Budget estimé
-          <input type="text" name="budget" placeholder="ex. 15-30k€">
-        </label>
-        <label>
-          Message
-          <textarea name="message" rows="5" required></textarea>
-        </label>
-        <button class="btn btn--primary" type="submit">Envoyer</button>
+        <label>Name / company<input type="text" name="name" required></label>
+        <label>Email<input type="email" name="email" required></label>
+        <label>Phone (optional)<input type="text" name="phone"></label>
+        <label>Estimated budget<input type="text" name="budget" placeholder="e.g. 15–30k€"></label>
+        <label>Message<textarea name="message" rows="5" required></textarea></label>
+        <button class="btn btn--primary" type="submit">Send</button>
       </form>
     </section>
   </main>
 
   <footer class="footer">
-    <p>© SemeraroGOD 2026 · Studio Digital Côte d'Azur</p>
+    <p>© SemeraroGOD 2026 · Digital Studio</p>
   </footer>
 
   <script>
-    const form = document.getElementById('contactForm');
-    if (form) {
-      form.addEventListener('submit', (e) => {
-        e.preventDefault();
-        const data = new FormData(form);
-        const body = `Nom: ${data.get('name')}` + decodeURIComponent('%0A') +
-          `Email: ${data.get('email')}` + decodeURIComponent('%0A') +
-          `Téléphone: ${data.get('phone') || '—'}` + decodeURIComponent('%0A') +
-          `Budget: ${data.get('budget') || '—'}` + decodeURIComponent('%0A') +
-          `Message: ${data.get('message')}`;
-        window.location.href = `mailto:hello@semerarogod.com?subject=Brief%20SemeraroGOD&body=${encodeURIComponent(body)}`;
-      });
-    }
+    document.getElementById('contactForm').addEventListener('submit', (e) => {
+      e.preventDefault();
+      const data = new FormData(e.target);
+      const body = `Name: ${data.get('name')}` + decodeURIComponent('%0A') +
+        `Email: ${data.get('email')}` + decodeURIComponent('%0A') +
+        `Phone: ${data.get('phone') || '—'}` + decodeURIComponent('%0A') +
+        `Budget: ${data.get('budget') || '—'}` + decodeURIComponent('%0A') +
+        `Message: ${data.get('message')}`;
+      window.location.href = `mailto:hello@semerarogod.com?subject=SemeraroGOD&body=${encodeURIComponent(body)}`;
+    });
   </script>
 </body>
 </html>
