--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SemeraroGOD — Studio Digital</title>
-  <meta name="description" content="Agence digitale premium : identités, sites sur-mesure, activations et contenus." />
+  <title>SemeraroGOD — Digital Studio</title>
+  <meta name="description" content="Premium digital studio: identities, bespoke sites, activations and content." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600&display=swap" rel="stylesheet">
@@ -15,33 +15,33 @@
   <header class="nav">
     <div class="nav__logo"><img src="assets/logo-wordmark.svg" alt="SemeraroGOD"></div>
     <nav class="nav__links" id="navLinks">
-      <a href="#hero">Accueil</a>
+      <a href="#hero">Home</a>
       <a href="#services">Services</a>
-      <a href="#about">À propos</a>
-      <a href="#portfolio">Portfolio</a>
-      <a href="#testimonials">Témoignages</a>
+      <a href="#about">About</a>
+      <a href="#work">Work</a>
+      <a href="#testimonials">Testimonials</a>
       <a href="#contact">Contact</a>
     </nav>
     <button class="nav__toggle" id="navToggle">☰</button>
-    <a class="nav__cta" href="mailto:hello@semerarogod.com">Parler au studio</a>
+    <a class="nav__cta" href="mailto:hello@semerarogod.com">Start a project</a>
   </header>
 
   <main>
     <section class="hero" id="hero">
       <div class="hero__content" data-aos="fade-right">
-        <p class="eyebrow">Studio digital · Côte d'Azur → Monde</p>
-        <h1>Identités premium, sites sur-mesure et activations taillées pour les marques exigeantes.</h1>
-        <p class="hero__desc">SemeraroGOD assemble branding, produit et contenus dans un seul flux. Pas de silos : design, dev et contenus avancent ensemble.</p>
+        <p class="eyebrow">Digital studio · Côte d'Azur → Worldwide</p>
+        <h1>Premium identities, bespoke websites and activations built for ambitious brands.</h1>
+        <p class="hero__desc">SemeraroGOD unifies branding, product and content within one workflow. No silos—design, dev and content move together.</p>
         <div class="hero__actions">
-          <a class="btn btn--primary" href="#contact">Démarrer un projet</a>
-          <a class="btn btn--ghost" href="#portfolio">Voir nos cas</a>
+          <a class="btn btn--primary" href="#contact">Start a project</a>
+          <a class="btn btn--ghost" href="#work">See our work</a>
         </div>
       </div>
       <div class="hero__visual" data-aos="fade-left">
         <img src="assets/logo-icon.svg" alt="SemeraroGOD" />
         <ul>
-          <li>+40 lancements en 24 mois</li>
-          <li>Sites headless, Webflow & Shopify</li>
+          <li>+40 launches in 24 months</li>
+          <li>Headless builds, Webflow & Shopify</li>
           <li>Branding, content, automation</li>
         </ul>
       </div>
@@ -50,77 +50,77 @@
     <section class="section" id="services">
       <div class="section__header" data-aos="fade-up">
         <p class="eyebrow">Services</p>
-        <h2>Ce que nous orchestrons</h2>
+        <h2>What we deliver</h2>
       </div>
       <div class="grid__cards">
         <article data-aos="fade-up" data-aos-delay="0">
           <h3>Brand systems</h3>
-          <p>Identités, guidelines, templates decks / socials prêts à activer.</p>
+          <p>Identities, guidelines, deck & social templates ready to deploy.</p>
         </article>
         <article data-aos="fade-up" data-aos-delay="100">
-          <h3>Web sur-mesure</h3>
-          <p>UX/UI haute fidélité, intégrations headless, Webflow, animations GSAP.</p>
+          <h3>Bespoke web</h3>
+          <p>High fidelity UX/UI, headless builds, Webflow & GSAP animations.</p>
         </article>
         <article data-aos="fade-up" data-aos-delay="200">
           <h3>Activation & content</h3>
-          <p>Landing campaigns, CRM, newsletters, motion & reels clé en main.</p>
+          <p>Landing campaigns, CRM, newsletters, motion & reels turnkey.</p>
         </article>
         <article data-aos="fade-up" data-aos-delay="300">
-          <h3>Support continu</h3>
-          <p>Design system, maintenance, CRO, performance analytics.</p>
+          <h3>Ongoing support</h3>
+          <p>Design systems, maintenance, CRO, performance analytics.</p>
         </article>
       </div>
     </section>
 
     <section class="about-hero" id="about">
       <div data-aos="fade-right">
-        <p class="eyebrow">À propos</p>
-        <h2>Un atelier digital indépendant obsédé par la vitesse & la précision.</h2>
-        <p>Nous opérons en strike team : creative direction, UX/UI, front-end, automation. Slack/Notion/Figma, recaps quotidiens, décisions en temps réel.</p>
+        <p class="eyebrow">About</p>
+        <h2>An independent digital atelier obsessed with speed & precision.</h2>
+        <p>We operate as a strike team: creative direction, UX/UI, front-end, automation. Slack/Notion/Figma, daily recaps, real-time decisions.</p>
       </div>
       <div class="stats" data-aos="fade-left">
-        <article><strong>40</strong><span>projets livrés</span></article>
-        <article><strong>3</strong><span>pays opérés</span></article>
-        <article><strong>96%</strong><span>clients récurrents</span></article>
+        <article><strong>40</strong><span>projects shipped</span></article>
+        <article><strong>3</strong><span>countries operated</span></article>
+        <article><strong>96%</strong><span>returning clients</span></article>
       </div>
     </section>
 
-    <section class="section" id="portfolio">
+    <section class="section" id="work">
       <div class="section__header" data-aos="fade-up">
-        <p class="eyebrow">Portfolio</p>
-        <h2>Réalisations récentes</h2>
+        <p class="eyebrow">Work</p>
+        <h2>Recent projects</h2>
       </div>
       <div class="cases__list">
         <article data-aos="fade-up" data-aos-delay="0">
-          <div class="tag">Web immersif</div>
+          <div class="tag">Immersive web</div>
           <h3>Riviera Collection</h3>
-          <p>Scroll narratif + configurateur villas. Lighthouse 97.</p>
+          <p>Narrative scroll + villa configurator. Lighthouse 97.</p>
         </article>
         <article data-aos="fade-up" data-aos-delay="120">
-          <div class="tag">Plateforme</div>
+          <div class="tag">Platform</div>
           <h3>Blue Asset</h3>
-          <p>Branding + design system + librairie React.</p>
+          <p>Branding + design system + React library.</p>
         </article>
         <article data-aos="fade-up" data-aos-delay="240">
           <div class="tag">Activation</div>
           <h3>Vice City Pop-up</h3>
-          <p>Site événement + kit social, 5 200 leads en 10 j.</p>
+          <p>Event site + social kit, 5,200 leads in 10 days.</p>
         </article>
       </div>
     </section>
 
     <section class="section" id="testimonials">
       <div class="section__header" data-aos="fade-up">
-        <p class="eyebrow">Témoignages</p>
-        <h2>Ce que disent nos clients</h2>
+        <p class="eyebrow">Testimonials</p>
+        <h2>What our clients say</h2>
       </div>
       <div class="testimonials">
         <blockquote data-aos="fade-up" data-aos-delay="0">
-          “SemeraroGOD a livré un site headless + design system en 5 semaines. Leur approche est chirurgicale.”
+          “SemeraroGOD shipped a headless site + design system in 5 weeks. Their approach is surgical.”
           <cite>— Anaïs M., Maison Riviera</cite>
         </blockquote>
         <blockquote data-aos="fade-up" data-aos-delay="120">
-          “Ils gèrent la direction artistique, le dev et les contenus. On n’a plus besoin de coordonner 3 équipes.”
+          “They run art direction, dev and content. We no longer juggle three teams.”
           <cite>— Matteo R., Fintech</cite>
         </blockquote>
       </div>
@@ -129,20 +129,20 @@
     <section class="contact" id="contact">
       <div data-aos="fade-right">
         <p class="eyebrow">Contact</p>
-        <h2>Prêt à lancer votre prochain projet ?</h2>
+        <h2>Ready to launch your next project?</h2>
         <p>hello@semerarogod.com · +33 6 00 00 00 00</p>
       </div>
       <form class="contact-form" id="contactForm" data-aos="fade-left">
-        <label>Nom / société<input type="text" name="name" required></label>
+        <label>Name / company<input type="text" name="name" required></label>
         <label>Email<input type="email" name="email" required></label>
         <label>Message<textarea name="message" rows="3" required></textarea></label>
-        <button class="btn btn--primary" type="submit">Envoyer</button>
+        <button class="btn btn--primary" type="submit">Send</button>
       </form>
     </section>
   </main>
 
   <footer class="footer">
-    <p>© SemeraroGOD 2026 · Digital Studio — Suivez-nous</p>
+    <p>© SemeraroGOD 2026 · Digital Studio — Follow us</p>
     <div class="socials">
       <a href="#">LinkedIn</a>
       <a href="#">Dribbble</a>
@@ -161,8 +161,8 @@
     document.getElementById('contactForm').addEventListener('submit', (e) => {
       e.preventDefault();
       const data = new FormData(e.target);
-      const msg = `Nom: ${data.get('name')}%0AEmail: ${data.get('email')}%0AMessage: ${data.get('message')}`;
-      window.location.href = `mailto:hello@semerarogod.com?subject=Brief%20SemeraroGOD&body=${msg}`;
+      const msg = `Name: ${data.get('name')}%0AEmail: ${data.get('email')}%0AMessage: ${data.get('message')}`;
+      window.location.href = `mailto:hello@semerarogod.com?subject=SemeraroGOD&body=${msg}`;
     });
   </script>
 </body>
